Remove auth and add demo link

--- a/views/index.jade
+++ b/views/index.jade
@@ -71,7 +71,7 @@ block content
         ul
           li Signal processing
           li 
-            Codecs selection
+            p Codec selection
             ul
               li Audio: Opus
               li Video: VP8
@@ -132,6 +132,8 @@ block content
         p Make sure you use HTTPS for signaling
       section
         h1 DEMO!
+        p
+          a(href="http://vmux.co", target="_blank") http://vmux.co
       section
         h1 VMUX
         ul
